[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/cuore_stretto.png" type="Texture" id=1]
[ext_resource path="res://assets/cuore_normale.png" type="Texture" id=2]
[ext_resource path="res://scripts/bootsplash.gd" type="Script" id=3]
[ext_resource path="res://assets/cuore_largo.png" type="Texture" id=4]
[ext_resource path="res://assets/titolo_bootsplash.png" type="Texture" id=5]
[ext_resource path="res://assets/palle_bootsplash.png" type="Texture" id=6]
[ext_resource path="res://assets/logo_tesi_suono.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/battito.mp3" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
length = 0.967
loop = true

[sub_resource type="Animation" id=2]
resource_name = "battito"
length = 0.967
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("cuore_normale:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("cuore_largo:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("cuore_stretto:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, false, true ]
}

[node name="Bootsplash" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
script = ExtResource( 3 )

[node name="cuore_normale" type="TextureRect" parent="."]
anchor_left = 0.549
anchor_top = 0.337
anchor_right = 0.549
anchor_bottom = 0.337
margin_left = -546.92
margin_top = -286.04
margin_right = 1093.08
margin_bottom = 2073.96
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="cuore_largo" type="TextureRect" parent="."]
visible = false
anchor_left = 0.549
anchor_top = 0.337
anchor_right = 0.549
anchor_bottom = 0.337
margin_left = -546.92
margin_top = -286.04
margin_right = 1093.08
margin_bottom = 2073.96
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[node name="cuore_stretto" type="TextureRect" parent="."]
visible = false
anchor_left = 0.549
anchor_top = 0.337
anchor_right = 0.549
anchor_bottom = 0.337
margin_left = -543.92
margin_top = -287.04
margin_right = 1096.08
margin_bottom = 2072.96
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.934
one_shot = true
autostart = true

[node name="battito" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/battito = SubResource( 2 )

[node name="titolo" type="TextureRect" parent="."]
anchor_left = 0.453
anchor_top = 0.302
anchor_right = 0.953
anchor_bottom = 0.422
margin_left = -0.240021
margin_top = 0.159973
margin_right = -0.240112
margin_bottom = 0.759949
texture = ExtResource( 5 )

[node name="palle" type="TextureRect" parent="."]
anchor_left = 0.179
anchor_top = 0.331
anchor_right = 0.906
anchor_bottom = 0.833
margin_left = 2.67999
margin_top = -0.520081
margin_right = -0.480103
margin_bottom = 0.639893
texture = ExtResource( 6 )

[node name="callas" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.444
one_shot = true
autostart = true

[node name="battito_suono" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 1.8

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
